--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
 <body>
 
 	<div class="container">
+		<form>
+			<div>
+				<input type="text" id="fname" placeholder="First Name" />
+			</div>
+			<div>
+				<input type="text" is="lname" placeholder="Last Name" />
+			</div>
+			<div>
+				<input type="email" id="email" placeholder="Email Address" />
+			</div>
+			<div>
+				<textarea id="msg" placeholder="Your Message"></textarea>
+			</div>
+			<div class="button">
+        		<button type="submit">Submit</button>
+        	</div>
 
+		</form>
 	</div>
 
 
