--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<input type="text" id="fname" placeholder="First Name" />
 			</div>
 			<div>
-				<input type="text" is="lname" placeholder="Last Name" />
+				<input type="text" id="lname" placeholder="Last Name" />
 			</div>
 			<div>
 				<input type="email" id="email" placeholder="Email Address" />
