add form event listener

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div>
 				<textarea id="msg" placeholder="Your Message"></textarea>
 			</div>
-			<div class="button">
+			<div class="button" id="button">
         		<button type="submit">Submit</button>
         	</div>
 
