style page q git

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
+	<div id="wrapper">
+		<h1>Birds are neat</h1>
+		<img src="img/birds.jpg" alt="birds">
+		<h2>Why are birds neat?</h2>
+		<p>Birds are neat because they can fly and have feathers.</p>
+		<div id="button" >
+			<a href="#">Read More</a>
+		</div>
+	</div>
 
 
 
