--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 	<div class="container">
-		<form>
+		<form id="myForm">
 			<div>
 				<input type="text" id="fname" placeholder="First Name" />
 			</div>
